--- a/src/index.scss
+++ b/src/index.scss
@@ -65,6 +65,8 @@ body {
   margin: auto;
   transition: all 0.2s ease-in-out;
 
+  margin-bottom: 20px;
+
   &:hover {
     background-color: rgb(80, 5, 23);
   }
@@ -80,11 +82,128 @@ input {
   width: 80vw;
 }
 
-img {
-  max-width: 80px;
-  max-height: 80px;
-  border-radius: 50%;
-  display: inline-block;
-  margin: 10px;
-  border: 3px solid blue;
+h2 {
+  text-align: center;
+}
+
+.character-select {
+  &__row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 20px 100px;
+  }
+
+  &__character {
+    border: 1px solid white;
+    width: 20vw;
+    height: 30vw;
+    border-radius: 5px;
+    cursor: pointer;
+    position: relative;
+    overflow: hidden;
+
+    &__img {
+      position: absolute;
+      height: 100%;
+      width: 100%;
+    }
+
+    &__name {
+      position: absolute;
+      width: 100%;
+      bottom: 0;
+      background-color: rgba(0, 0, 0, 0.5);
+      color: white;
+      text-align: center;
+    }
+  }
+}
+
+.player-characters {
+  display: flex;
+  justify-content: center;
+  margin: 0px 200px;
+
+  &__input {
+    border-radius: 10px;
+    padding: 15px;
+    min-height: 60px;
+  }
+
+  &__character {
+    margin-right: 50px;
+
+    &__profile {
+      margin: 0 20px;
+      position: relative;
+      height: 300px;
+      width: 200px;
+      & img {
+        position: absolute;
+        height: 100%;
+        width: 100%;
+      }
+
+      & p {
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+        background-color: rgba(0, 0, 0, 0.5);
+        color: white;
+        text-align: center;
+        padding: 20px 0;
+      }
+    }
+  }
+  &__opinion {
+    margin: 10px 0px;
+    font-weight: 600;
+    display: block;
+  }
+
+  &__input {
+    width: 80%;
+    padding: 0 10px;
+    position: relative;
+    left: -10%;
+  }
+}
+
+.debate-settings {
+  text-align: center;
+  margin-top: 20px;
+
+  & label {
+    margin: 0px 10px;
+  }
+  & input {
+    padding: 0px 10px;
+  }
+  & select {
+    padding: 10px 10px;
+    border-radius: 10px;
+  }
+
+  &__button {
+    margin: auto;
+    margin-top: 50px;
+    padding: 10px;
+    border: 1px solid white;
+    width: 100px;
+    border-radius: 10px;
+    cursor: pointer;
+
+    &:hover {
+      background-color: white;
+      color: black;
+    }
+  }
+}
+
+.text-bubble {
+  & img {
+    width: 100px;
+    margin: 0px 20px;
+  }
 }
